<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:orientation="vertical"
  	android:stretchColumns="0,1" >

<TableRow >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtcat"
        />
    <Spinner 
        android:id="@+id/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</TableRow>

<TableRow >
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtnome"
        />
    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
         />
    
</TableRow>


<TableRow >
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txttel"
        />
    <EditText
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
         />
    
</TableRow>

<TableRow >
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtend"
        />
    <EditText
        android:id="@+id/endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
         />
    
</TableRow>

<TableRow >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtcid"
        />
    <Spinner 
        android:id="@+id/cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
      <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtuf"
        />
    <Spinner 
        android:id="@+id/uf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</TableRow>


	<Button 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="cadastroClick"
      android:text="@string/btsalvar"
    />


</TableLayout>
